--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso de Abobora</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Aboboras laranjas e azuis</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore cum blanditiis ullam eligendi? Rerum voluptas quibusdam amet impedit nobis reiciendis repudiandae, voluptate fuga facilis incidunt accusantium iste nostrum dolorum blanditiis?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Argio 002</p>
+            <h2>Curso de aboboraws</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, praesentium ad ab quisquam voluptates ducimus excepturi obcaecati amet sunt non magnam quibusdam blanditiis itaque fugit consequuntur corrupti dolore sequi error!</p>
         </article>
     </main> 
 </body>
